--- a/css/estilos.css
+++ b/css/estilos.css
@@ -9,12 +9,12 @@ body {
 }
 
 p {
-    font-size: 1.5vw;
+    font-size: 1.3vw;
     font-weight: 500;
 }
 
 h2 {
-    font-size: 4vw;
+    font-size: 3vw;
     font-weight: 800;
 }
 
@@ -29,7 +29,7 @@ button {
     margin-left: 8vw;
     border: 0;
     float: left;
-    margin-top: -5vw;
+    margin-top: -10vw;
     cursor: pointer;
 }
 
@@ -55,18 +55,19 @@ button {
 }
 
 h1 {
-    font-size: 7.5vw;
+    font-size: 6vw;
     color: #93B95A;
     margin-left: 8vw;
-    width: 40%;
+    width: 30%;
     font-weight: 800;
     line-height: 90%;
+    margin-top: 8vw;
 }
 
 img.piel {
     width: 33vw;
     margin-left: 60vw;
-    margin-top: -35vw;
+    margin-top: -25vw;
 }
 
 
@@ -115,7 +116,7 @@ img.piel {
     font-weight: 500;
     z-index: 3;
     color: #A2BDDB;
-    margin-top: -0.5vw;
+    margin-top: 0vw;
     display: flex;
     justify-content: center;
 }
@@ -153,28 +154,28 @@ img.piel {
 .seccion-4 {
     position: relative;
     z-index: 2;
-    margin: -80vw 0 0 8vw;
+    margin: -80vw 0 0 15vw;
 
 }
 
 .violeta {
     justify-content: center;
     background-color: #9E8CD0;
-    width: 85vw;
-    height: 40vw;
+    width: 70vw;
+    height: 30vw;
 }
 
 .seccion-4 h2 {
     color: #fff;
-    margin-top: -32vw;
+    margin-top: -25vw;
     margin-left: 12vw;
     width: 70vw;
     height: 5vw;
 }
 
 .seccion-4 p {
-    margin-top: -1vw;
-    margin-left: 12vw;
+    margin-top: -2vw;
+    margin-left: 5vw;
     width: 60vw;
     height: 20vw;
     color: #fff;
@@ -248,7 +249,7 @@ img.piel {
     position: relative;
     z-index: 2;
     color: #9E8CD0;
-    margin-top: -330vw;
+    margin-top: -360vw;
     margin-left: 10vw;
     width: 30vw;
     height: 5vw;
@@ -276,7 +277,7 @@ img.piel {
     position: relative;
     z-index: 2;
     width: 100%;
-    height: 340vw;
+    height: 365vw;
     margin-left: 0vw;
     top: 0vw;
 }
@@ -293,10 +294,10 @@ img.piel {
     position: relative;
     z-index: 2;
     background-color: #9E8CD0;
-    width: 85vw;
-    height: 290vw;
-    margin-left: 7.1vw;
-    top: 1vw;
+    width: 80vw;
+    height: 282vw;
+    margin-left: 9vw;
+    top: -5vw;
 }
 
 .seccion-7 h2 {
@@ -314,9 +315,9 @@ img.piel {
     z-index: 2;
     color: #F6F3EE;
     font-weight: 600;
-    top: -285vw;
-    font-size: 3.6vw;
-    left: 36vw;
+    top: -288vw;
+    font-size: 2.5vw;
+    left: 37vw;
     width: 45vw;
 }
 
@@ -325,7 +326,7 @@ img.piel {
     position: relative;
     align-items: center;
     z-index: 2;
-    top: -283vw;
+    top: -285vw;
 }
 
 .redes1,
@@ -412,41 +413,449 @@ img.piel {
     margin-left: -30vw;
 }
 
-.no-robots{
+.no-robots {
     margin-bottom: 7vw;
 }
 
 
+
+.experiencia {
+    position: relative;
+    margin-top: 215vw;
+    margin-left: 25vw;
+    font-size: 3vw;
+    width: 50%;
+    color: #F6F3EE;
+    z-index: 7;
+    margin-bottom: 0vw;
+}
+
 /*----------------OCTAVA SECCIÓN-----------------*/
 
 .seccion-8 {
-    width: 79vw;
-    height: 130vw;
-    margin-left: 15vw;
-    margin-top: 40vw;
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    z-index: 6;
+    width: 100%;
+    height: 275vw;
     align-items: center;
     justify-content: center;
+    background-color: #94BA5B;
+    margin-top: -10vw;
+    margin-left: 0vw;
 }
 
-.seccion-8 h3 {
+.titulos {
+    margin-top: -215vw;
+    margin-left: 5vw;
+}
+
+.contenido {
+    margin-top: -140vw;
+}
+
+.seccion-8 h3,
+.seccion-9 h3,
+.seccion-10 h3, 
+.seccion-11 h3,
+.seccion-12 h3,
+.seccion-13 h3 {
     position: relative;
     z-index: 2;
     color: #F6F3EE;
     font-weight: 700;
-    font-size: 3.6vw;
+    font-size: 3vw;
+    width: 40%;
+    margin-left: 5vw;
+    margin-bottom: 0vw;
 }
 
-.fotos {
+.seccion-8 h4,
+.seccion-9 h4, 
+.seccion-11 h4,
+.seccion-12 h4, 
+.seccion-13 h4{
+    color: #474747;
+    margin-left: 5vw;
+    width: 60%;
+    font-size: 2vw;
+    margin-top: 1vw;
+}
+
+.seccion-8 p,
+.seccion-9 p,
+.seccion-10 p,
+.seccion-11 p,
+.seccion-12 p,
+.seccion-13 p {
+    margin-left: 5vw;
+    width: 40vw;
+    margin-top: 0vw;
+    color: #474747;
+
+}
+
+.seccion-8 img {
+    width: 30vw;
+    height: 30vw;
+}
+
+.carousel-transmedia {
+    margin-top: -50vw;
     position: relative;
-    z-index: 2;
+    width: 30vw;
+    margin-left: -5vw;
+
+}
+
+
+/* Next & previous buttons */
+.prev,
+.next,
+.prev2,
+.next2,
+.prev3,
+.next3,
+.prev4,
+.next4,
+.prev5,
+.next5 {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next,
+.next2, 
+.next3,
+.next4,
+.next5 {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover,
+.next:hover,
+.prev2:hover,
+.next2:hover,
+.prev3:hover,
+.next3:hover,
+.prev4:hover,
+.next4:hover,
+.prev5:hover,
+.next5:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+/* Number text (1/3 etc) */
+.numbertext,
+.numbertext2,
+.numbertext3,
+.numbertext4,
+.numbertext5 {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot,
+.dot2, 
+.dot3, 
+.dot4,
+.dot5 {
+    cursor: pointer;
+    height: 1vw;
+    width: 1vw;
+    margin: 0.5vw 0.3vw;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+
+.active,
+.dot:hover,
+.active2,
+.dot2:hover,
+.active3,
+.dot3:hover,
+.active4,
+.dot4:hover,
+.active5,
+.dot5:hover {
+    background-color: #717171;
+}
+
+/* Fading animation */
+.fade,
+.fade2,
+.fade3,
+.fade4,
+.fade5 {
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
+@keyframes fade {
+    from {
+        opacity: .4
+    }
+
+    to {
+        opacity: 1
+    }
+}
+
+@keyframes fade2 {
+    from {
+        opacity: .4
+    }
+
+    to {
+        opacity: 1
+    }
+    
+}
+
+@keyframes fade3 {
+    from {
+        opacity: .4
+    }
+
+    to {
+        opacity: 1
+    }
+}
+
+@keyframes fade4 {
+    from {
+        opacity: .4
+    }
+
+    to {
+        opacity: 1
+    }
+}
+
+@keyframes fade5 {
+    from {
+        opacity: .4
+    }
+
+    to {
+        opacity: 1
+    }
+}
+/*------- SECCIÓN 9 --------*/
+
+.seccion-9 {
     display: flex;
-    flex-direction: column;
+    flex-direction: row-reverse;
+    position: relative;
+    z-index: 8;
+    margin-top: -220vw;
     justify-content: center;
     align-items: center;
-    gap: 3vw;
-    left: -5vw;
 }
 
-.fotos img {
-    width: 60vw;
+.seccion-9 img {
+    width: 30vw;
+    height: 30vw;
+}
+
+.next2 {
+    margin-right: 57vw;
+}
+
+/*---------- SECCIÓN 10 -----------*/
+
+.seccion-10 {
+    position: relative;
+    z-index: 6;
+    margin-top: 7vw;
+}
+
+.seccion-10 h3 {
+    margin-left: 10vw;
+}
+
+.seccion-10 p {
+    margin-top: 2vw;
+    width: 80%;
+    margin-left: 10vw;
+}
+
+.folletos {
+    margin-left: 8vw;
+}
+
+.Revista{
+    position: relative;
+    z-index: 9;
+    margin-top: 5vw;
+    margin-left: 30vw;
+    width: 40%;
+}
+
+.seccion-10 img:hover {
+    transform: scale(1.1);
+    /* Aumenta la imagen en un 10% */
+    transition: transform 0.6s ease;
+}
+
+.seccion-10 img {
+    width: 25vw;
+    height: 25vw;
+    margin-top: 2vw;
+    margin-left: 2vw;
+}
+
+
+/*---------------- SECCIÓN 11 ---------------------*/
+
+.seccion-11 {
+    position: relative;
+    z-index: 6;
+    display: flex;
+    flex-direction: row;
+    margin-top: 18vw;
+}
+
+.seccion-11 img {
+    width: 30vw;
+    height: 30vw;
+    margin-left: 2vw;
+}
+
+.prev3{
+    margin-left: 2vw;
+}
+
+.next3{
+    margin-right: 5vw;
+}
+
+.numbertext3{
+    margin-left: 2vw;
+}
+
+.titulos3{
+    margin-left: 10vw;
+}
+
+/*--------- SECCIÓN 12 ----------*/
+
+.seccion-12{
+    display: flex;
+    flex-direction: row-reverse;
+    position: relative;
+    z-index: 6;
+    margin-top: 5vw;
+    margin-left: 12vw;
+}
+
+.seccion-12 img{
+    width: 30vw;
+    height: 30vw;
+}
+
+.next4{
+    margin-right: 56.7vw;
+}
+
+/*--------- SECCIÓN 13 ----------*/
+
+.seccion-13{
+    position: relative;
+    z-index: 6;
+    margin-top: 8vw;
+    margin-left: 5vw;
+}
+
+.volantes{
+    margin-left: 5vw;
+    margin-top: 5vw;
+}
+
+.seccion-13 img{
+    width: 20vw;
+    height: 20vw;
+    margin-left: 0.5vw;
+}
+
+.seccion-13 p{
+    width: 70%;
+}
+
+.seccion-13 img:hover {
+    transform: scale(1.1);
+    /* Aumenta la imagen en un 10% */
+    transition: transform 0.6s ease;
+}
+
+
+/*----------- SECCIÓN 14 ---------------*/
+
+.seccion-14{
+    background-color: #F6F3EE;
+    margin-top: -12vw;
+    margin-right: 5vw;
+    margin-bottom: 5vw;
+}
+
+.seccion-14 h3{
+padding-top: 30vw;
+color: #9E8CD0;
+font-size: 3vw;
+margin-left: 5vw;
+font-weight: 800;
+}
+
+.seccion-14 h4{
+font-size: 2.5vw;
+color: #474747;
+margin-left: 5vw;
+margin-top: -2vw;
+}
+
+.seccion-14 p{
+    margin-left: 5vw;
+    color: #474747;
+    width: 50%;
+}
+
+
+.carousel-cabina{
+    position: relative;
+    margin-left: 60vw;
+    margin-top: -25vw;
+}
+
+
+.seccion-14 img{
+    width: 30vw;
+    height: 30vw;
+}
+
+.mySlides5 {
+    display: none;
+}
+
+.next5{
+    margin-right: 3.8vw;
 }
